# gitlab_search

./: .gitignore  README.md  pyproject.toml
src/: cli.py
src/gitlab_search/: gitlabClient.py
