[tool.poetry]
name = "gitlab-search"
version = "0.1.0"
description = "Gitlab-Search is an internal CLI and web application tool designed to search through gitlab projects and subgroups for keywords and regular expressions (regex)"
authors = ["micha <micha.vardy@tufin.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gitlab_search"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
requests = "^2.31.0"
tqdm = "^4.66.1"
colorama = "^0.4.6"
tabulate = "^0.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
click = "^8.1.6"
requests = "^2.31.0"
tqdm = "^4.66.1"
colorama = "^0.4.6"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
search = "src.gitlab_search:search"
